[package]
name = "pgs-parse"
version = "0.1.0"
authors = ["Milan Bolaric"]
edition = "2021"
license = "MIT"

description = "Parse Presentation Graphic Stream (SUP files)"

keywords = ["SubTitle", "SUP", "PGS"]

[dependencies]
log = { version = "0.4.17", features = ["max_level_debug", "release_max_level_warn"] }

[dev-dependencies]
log4rs = "1.3.0"
tiff = "0.9.1"
clap = { version = "4.5.17", features = ["derive"] }