[package]
name = "pgs-parse"
version = "0.1.0"
authors = ["Milan Bolaric"]
edition = "2021"
include = [
    "src/**/*",
    "Cargo.toml",
    "README.md", 
    "LICENSE"
]
license = "MIT"
homepage = "https://github.com/mbolaric/pgs"
repository = "https://github.com/mbolaric/pgs"
description = "Parse Presentation Graphic Stream (SUP files)"

keywords = ["SubTitle", "SUP", "PGS"]

categories = ["parser-implementations"]

[dependencies]
log = { version = "0.4.17", features = ["max_level_debug", "release_max_level_warn"] }

[dev-dependencies]
log4rs = "1.3.0"
tiff = "0.9.1"
clap = { version = "4.5.18", features = ["derive"] }